--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_make_call">MakeCallActivity</string>
     <string name="title_activity_send_msg">SendMsgActivity</string>
+    <string name="title_activity_camera">CameraActivity</string>
 </resources>
